Corrected typos and mistakes in model description.

--- a/descripcion_modelo.ipynb
+++ b/descripcion_modelo.ipynb
@@ -24,12 +24,12 @@
     "    I^i(t+1) &= \\alpha A^i(t) + ( 1 - (\\gamma_I + \\mu_I + \\nu) ) I^i(t) \\\\\n",
     "    H^i(t+1) &= \\nu I^i(t) + ( 1 - (\\gamma_H + \\mu_H) ) H^i(t) \\\\\n",
     "    R^i(t+1) &= \\gamma_I I^i(t) + \\gamma_H H^i(t) + R^i(t) \\\\\n",
-    "    F^i(t+1) &= \\mu_H I^i(t) + F^i(t),\n",
+    "    F^i(t+1) &= \\mu_I I^i(t) + \\mu_H H^i(t) + F^i(t),\n",
     "  \\end{aligned}\n",
     "  \\label{eq:seaihrd}\n",
     "\\end{align}\n",
     "\n",
-    "cuya formulación se explica a continuación. En un día, $t$, la población susceptible se infecta con probabilidad $Pi^i(t)$, quedando expuesta al virus. Los individuos que quedan expuestos incuban el virus y, en un promedio de $\\eta^{-1}$ días, se consideran como asintomáticos que, en un promedio de $\\alpha^{-1}$ días, presentan síntomas y se consideran infectados. La diferencia entre un individuo expuesto, uno asintomático y uno infectado es que los primeros no presentan síntomas ni son contagiosos, los segundos tampoco presentan síntomas pero sí son contagiosos y los últimos ya presentan síntomas notables. Los individuos infectados pueden recuperarse naturalmente, a una tasa $\\gamma_I$, ir al hospital a una tasa $\\nu$, o, en el peor de los casos, fallecer sin ser tratados, a una tasa $\\mu_I$. De los pacientes hospitalizados, unos se recuperaran, a una tasa $\\gamma_H$, y otros fallecen, a una tasa $\\mu_H$. Dichas tasas consideran 1) el tiempo de transición entre una categoría y otra, y 2) la probabilidad de un individuo de cambiar de categoría. \n",
+    "cuya formulación se explica a continuación. En un día, $t$, la población susceptible se infecta con probabilidad $\\Pi^i(t)$, quedando expuesta al virus. Los individuos que quedan expuestos incuban el virus y, en un promedio de $\\eta^{-1}$ días, se consideran como asintomáticos que, en un promedio de $\\alpha^{-1}$ días, presentan síntomas y se consideran infectados. La diferencia entre un individuo expuesto, uno asintomático y uno infectado es que los primeros no presentan síntomas ni son contagiosos, los segundos tampoco presentan síntomas pero sí son contagiosos y los últimos ya presentan síntomas notables. Los individuos infectados pueden recuperarse naturalmente, a una tasa $\\gamma_I$, ir al hospital a una tasa $\\nu$, o, en el peor de los casos, fallecer sin ser tratados, a una tasa $\\mu_I$. De los pacientes hospitalizados, unos se recuperaran, a una tasa $\\gamma_H$, y otros fallecen, a una tasa $\\mu_H$. Dichas tasas consideran 1) el tiempo de transición entre una categoría y otra, y 2) la probabilidad de un individuo de cambiar de categoría. \n",
     "\n",
     "Cuantificamos la probabilidad de que un individuo quede expuesto al virus de la siguiente manera\n",
     "\n",
@@ -40,7 +40,7 @@
     "\n",
     "donde $\\Pi^i(t)$ depende de la proporción de gente contagiosa en el día $t$. Elaborando mejor, tome $\\beta$ como la probabilidad que un individuo suceptible se infecte al ponerse en contacto con uno contagioso (ya sea asintomático o infectado) y tome $\\langle k \\rangle$ como el número de contactos promedio que alguien tiene durante el día. Asumiendo que la población está bien mezclada y que cada contacto es independiente, el último término en la ecuación (\\ref{eq:prob_desease}) nos da la probabilidad de que alguien **no** se contagie el día $t$. \n",
     "\n",
-    "Ajustamos los parámetros de nuestro modelo con los presentados en [[4]](https://covid-19-risk.github.io/map/model.pdf) y las referencias ahí expuestas. La información sobre la estructura poblacional de México fue tomada de los datos oficiales del INEGI [[5]](https://www.inegi.org.mx/). Para estimar la infectividad $\\beta$ en nuestro modelo, tomamos el número básico de reproducción, $R_0$, y notamos que, simplificacando el apéndice en [[4]](https://covid-19-risk.github.io/map/model.pdf), $R_0 = \\langle k \\rangle \\log \\big( (1-\\beta)^{\\alpha^{-1} + \\eta^{-1}}\\Big)$. Tomamos el rango de $R_0$ reportado en [[6]](https://www.nejm.org/doi/full/10.1056/NEJMoa2001316), lo que nos permite hacer proyecciones del número de casos totales de COVID-19 con un intervalo de confianza del $95 \\%$.\n",
+    "Ajustamos los parámetros de nuestro modelo con los presentados en [[4]](https://covid-19-risk.github.io/map/model.pdf) y las referencias ahí expuestas. La información sobre la estructura poblacional de México fue tomada de los datos oficiales del INEGI [[5]](https://www.inegi.org.mx/). Para estimar la infectividad $\\beta$ en nuestro modelo, tomamos el número básico de reproducción, $R_0$, y notamos que, simplificando el apéndice en [[4]](https://covid-19-risk.github.io/map/model.pdf), se obtiene que $R_0 = \\langle k \\rangle \\log \\big( (1-\\beta)^{\\alpha^{-1} + \\eta^{-1}}\\big)$. La incertidumbre de nuestro modelo proviene de la incertidumbre de $R_0$. Tomamos el rango de $R_0$ como el intervalo de confianza de $95 \\%$ reportado en [[6]](https://www.nejm.org/doi/full/10.1056/NEJMoa2001316), lo que nos permite hacer un cono de proyecciones del número de casos totales.\n",
     "\n",
     "Con el modelo (\\ref{eq:seaihrd}), podemos calcular la evolución nacional del virus sumando para cada estado. Esto es,\n",
     "\n",
@@ -55,7 +55,7 @@
     "\n",
     "## Modelo con restricciones de movilidad\n",
     "\n",
-    "La epidemia que estamos viviendo se está esparciendo rápidamente en todo el mundo. Por eso, es importante tomar serias medidas para `#aplanarlacurva` y hacer que haya menos gente infectada al mismo tiempo. En concreto, una medida efectiva se da cuando el gobierno declara contención a nivel nacional, como se estableció por el gobierno mexicano el 23 de marzo de 2020 cuando inició de la Jornada Nacional de Sana Distancia.\n",
+    "La epidemia que estamos viviendo se está esparciendo rápidamente en todo el mundo. Por eso, es importante tomar serias medidas para `#aplanarlacurva` y hacer que haya menos gente infectada al mismo tiempo. En concreto, una medida efectiva se da cuando el gobierno declara contención a nivel nacional, como se estableció por el gobierno mexicano el 23 de marzo de 2020 cuando inició de la [Jornada Nacional de Sana Distancia](https://www.gob.mx/cms/uploads/attachment/file/541687/Jornada_Nacional_de_Sana_Distancia.pdf).\n",
     "\n",
     "Llamamos $t_c$ al día cuando se hace efectiva dicha contención. A partir de $t_c$, cada individuo disminuye, en promedio, su número de contactos diarios. Sin embargo, estos individuos volverán a sus hogares, donde conviven con la gente que vive ahí. Sea $\\kappa_0$ el porcentaje de gente que se queda en casa a partir de la contención, y sea $\\sigma$ el número promedio de habitantes por casa. El número promedio de contactos $\\langle k \\rangle$ disminuye a partir de $t_c$ de la siguiente manera\n",
     "\n",
@@ -73,7 +73,7 @@
     "    \\label{eq:contained}\n",
     "\\end{equation}\n",
     "\n",
-    "Quitamos a la población definida en (\\ref{eq:contained}) de la categoría de susceptibles y los derivamos a una nueva: los individuos contenidos. Así, podemos redefinir al modelo (\\ref{eq:seaihrd}) tomando en cuenta la contención del gobierno. Las ecuaciones resultantes son\n",
+    "Quitamos a la población definida en (\\ref{eq:contained}) de la categoría de susceptibles y los derivamos a una nueva: los individuos contenidos ($C$). Así, podemos redefinir al modelo (\\ref{eq:seaihrd}) tomando en cuenta la contención del gobierno. Las ecuaciones resultantes son\n",
     "\n",
     "\\begin{align}\n",
     "  \\begin{aligned}\n",
@@ -84,12 +84,12 @@
     "    I^i(t+1) &= \\alpha A^i(t) + ( 1 - (\\gamma_I + \\mu_I + \\nu) ) I^i(t) \\\\\n",
     "    H^i(t+1) &= \\nu I^i(t) + ( 1 - (\\gamma_H + \\mu_H) ) H^(t) \\\\\n",
     "    R^i(t+1) &= \\gamma_I I^i(t) + \\gamma_H H^i(t) + R^i(t) \\\\\n",
-    "    D^i(t+1) &= \\mu_H I^i(t) + D^i(t),\n",
+    "    F^i(t+1) &= \\mu_I I^i(t) + \\mu_H H^i(t) + F^i(t),\n",
     "  \\end{aligned}\n",
     "  \\label{eq:seaihrd_containtment}\n",
     "\\end{align}\n",
     "\n",
-    "donde $\\delta_{t,t_c} = 1$ si $t = t_c$ y  $\\delta_{t,t_c} = 0$ si $t \\neq t_c$.\n",
+    "donde $\\delta_{t,t_c} = 1$ si $t = t_c$ y  $\\delta_{t,t_c} = 0$ si $t \\neq t_c$ es la delta de Kronecker.\n",
     "\n",
     "<hr>\n",
     "\n",
